--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             </label>
                             <input type="text" id="animal-input" class="form-control shadow">
                         </div>
-                        <button type="submit" class="btn btn-info shadow">Submit</button>
+                        <button type="submit" class="btn btn-info shadow" id="submit-btn">Submit</button>
                     </div>
                     <div id="btn-view"></div>
                 </div>
