--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 </head>
 
 <body>
@@ -16,30 +18,28 @@
         <div class="row mt-5">
             <div class="card w-100">
                 <div class="card-header shadow text-center">
-                    <h2>Giphy Search App</h2>
+                    <h2 class="page-header">Video Game GIFs</h2>
                 </div>
                 <div class="card-body shadow">
                     <div class="form jumbotron mb-2 pt-4 pb-4 shadow">
                         <div class="form-group">
-                            <label for="animal-input">
-                                <h4>Add an animal!</h4>
+                            <label for="game-input">
+                                <h4 class="j-title">Add a video game!</h4>
                             </label>
-                            <input type="text" id="animal-input" class="form-control shadow">
+                            <input type="text" id="game-input" class="form-control shadow">
                         </div>
-                        <button type="submit" class="btn btn-info shadow" id="submit-btn">Submit</button>
+                        <button type="submit" class="btn shadow" id="submit-btn">Submit</button>
                     </div>
                     <div id="btn-view"></div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="card mt-3">
+            <div class="card shadow mt-3">
                     <div id="gif-view"></div>
             </div>
         </div>
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
